# Biomni

./: README.md  pyproject.toml
biomni_env/: setup_uv.sh
